--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,39 @@
-name: CI
+name: Build Docker Images
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+    tags:
+      - 'v*'
 
 jobs:
-  build-docker:
+  build-image:
     runs-on: ubuntu-latest
-    needs: lint
-    if: github.ref == 'refs/heads/master'
     steps:
-    - uses: actions/checkout@v3
-    -
-      name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    -
-      name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: acala/${{ github.event.repository.name }}
-        tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=ref,event=tag
-            type=sha
-            type=sha,format=long
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: acala/data-porter
+          tags: |
+            type=semver,pattern={{raw}}
+            type=raw,value={{sha}}
             type=raw,value=latest,enable={{is_default_branch}}
-    -
-      name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
