--- a/subql/package.json
+++ b/subql/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "euphrates-analytics",
+  "name": "euphrates-analytics-subql",
   "version": "0.0.1",
-  "description": "This project can be use as a starting point for developing your new Ethereum SubQuery project, it indexes all Gravatars on Ethereum",
+  "description": "Subql for Acala Euphrates",
   "main": "dist/index.js",
   "scripts": {
     "build": "subql build",
@@ -11,14 +11,12 @@
     "prepack": "rm -rf dist && npm run build",
     "test": "jest"
   },
-  "homepage": "https://github.com/subquery/ethereum-subql-starter",
-  "repository": "github:subquery/ethereum-subql-starter",
   "files": [
     "dist",
     "schema.graphql",
     "project.yaml"
   ],
-  "author": "SubQuery Team",
+  "author": "Acala Team",
   "license": "MIT",
   "dependencies": {
     "@subql/common": "latest",
