--- a/subql-old/tsconfig.json
+++ b/subql-old/tsconfig.json
@@ -9,12 +9,12 @@
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
-    "target": "es2017",
-    "strict": true,
+    "target": "ESNext",
+    "strict": true
   },
   "include": [
     "src/**/*",
     "node_modules/@subql/types-core/dist/global.d.ts",
-    "node_modules/@subql/types/dist/global.d.ts",
-  ],
+    "node_modules/@subql/types-ethereum/dist/global.d.ts"
+  ]
 }
