--- a/data-porter/package.json
+++ b/data-porter/package.json
@@ -10,11 +10,12 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
-    "pg": "^8.11.3",
-    "lodash": "^4.17.21"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.4",
     "@types/papaparse": "^5",
