--- a/data-porter/package.json
+++ b/data-porter/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "update:dune": "ts-node src/index.ts"
+    "upload": "ts-node src/index.ts"
   },
   "dependencies": {
     "axios": "^1.5.1",
