--- a/subql-euphrates/package.json
+++ b/subql-euphrates/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "subql-euphrates",
+  "name": "telescope-euphrates",
   "version": "1.0.0",
-  "description": "Subql for Acala Euphrates",
+  "description": "euphrates stats indexer",
   "main": "dist/index.js",
   "scripts": {
     "generate-types": "typechain --target=ethers-v5 --out-dir=./src/typechain abis/*.json",
