--- a/data-porter/package.json
+++ b/data-porter/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "acala-data-porter",
-  "version": "0.0.3",
+  "name": "telescope-data-porter",
+  "version": "1.0.0",
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
