--- a/subql-euphrates/package.json
+++ b/subql-euphrates/package.json
@@ -10,7 +10,7 @@
     "start:docker": "docker-compose pull && docker-compose up --remove-orphans",
     "dev": "yarn codegen && yarn build && docker-compose pull && docker-compose up --remove-orphans",
     "prepack": "rm -rf dist && npm run build",
-    "test": "jest"
+    "test": "subql build && subql-node-ethereum test"
   },
   "files": [
     "dist",
